--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,16 @@
 cmake_minimum_required(VERSION 3.0)
 project(CS736 LANGUAGES C)
 
-add_library(include include.c)
+add_library(measurement measurement.c)
 
 add_library(pipe pipe.c)
-target_link_libraries(pipe include)
+target_link_libraries(pipe measurement)
 
 add_library(socket socket.c)
-target_link_libraries(socket include)
+target_link_libraries(socket measurement)
 
 add_library(shared_mem shared_mem.c)
-target_link_libraries(shared_mem include)
+target_link_libraries(shared_mem measurement)
 
 add_executable(run run.c)
-target_link_libraries(run include socket pipe shared_mem)
+target_link_libraries(run measurement socket pipe shared_mem)
