Can't seem to get shm to work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "include.h": "c"
+        "include.h": "c",
+        "shm.h": "c",
+        "stdlib.h": "c"
     }
 }
